<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Activities.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/buttonTwitchConnect"
            android:text="@string/twitch_connect"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:padding="20dp"
            android:backgroundTint="@color/colorPrimaryDark"
            />
        <TextView
            android:text="@string/serviceonoff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Switch

            android:id="@+id/switchRunning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />

        <RelativeLayout
            android:layout_marginTop="25dp"
            android:id="@+id/layoutUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >
            <TextView
                android:id="@+id/textviewUsernameLabel"
                android:text="@string/connected_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

            <TextView
                android:id="@+id/textviewConnectedUsername"
                android:layout_width="wrap_content"
                android:layout_toRightOf="@id/textviewUsernameLabel"
                android:layout_toEndOf="@id/textviewUsernameLabel"

                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingRight="10dp"

                style="@style/TextAppearance.AppCompat.Medium"/>
            <Button
                android:textColor="@android:color/white"
                android:id="@+id/buttonTwitchLogout"
                android:text="@string/logout"
                android:backgroundTint="@color/colorPrimary"
                android:layout_below="@id/textviewUsernameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>




</RelativeLayout>
