<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"

    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/notificationTitleTextView"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/notificationtitle"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageButton
            android:elevation="5dp"
            android:id="@+id/notificationSettingsButton"
            android:src="@android:drawable/ic_menu_manage"
            android:backgroundTint="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
             />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_streams"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/notificationStreamsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>
    <Button
        android:id="@+id/buttonOpenStreams"
        android:text="@string/openstreams"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>